Implemented sort. Working on refresh, trying idea here https://discussions.udacity.com/t/picasso-is-not-refreshing-the-images/28140/6?u=sender_eric but proxy is down! Can't make progress till I get home
Former-commit-id: bcf900802c9c4999d45e336ae0fc7db7342a8702